# xqny_erp

./: README.md  pyproject.toml
xqny/: hooks.py  modules.txt
